--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
   background-color: black;
   color: white;
+  width: 100vw;
 }
 
 .footerContents {
